<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:minHeight="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:background="@color/colorPrimary"
                app:titleTextColor="@android:color/white"
                android:elevation="4dp"
                >
            </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:paddingBottom="10dp"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/person_item"
            app:layout_anchor="@id/main_toolbar"
            app:layout_anchorGravity="bottom|end"
            />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_gravity="bottom|right"
        app:layout_anchor="@id/recyclerview"
        app:layout_anchorGravity="bottom|right|end"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>